<?xml version="1.0"?>
<package format="2">
  <name>gtsam_catkin</name>
  <version>0.0.1</version>
  <description>gtsam_catkin</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
</package>

