<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gtsam_vendor</name>
  <version>4.3.0</version>
  <description>gtsam_vendor</description>
  <maintainer email="pascalau@ethz.ch">pascalau</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <!--<test_depend>ament_cmake_copyright</test_depend>-->
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

</package>
